--- a/layouts/partials/hero-section.html
+++ b/layouts/partials/hero-section.html
@@ -3,11 +3,11 @@
 <section class="hero-section">
     <div class="hero-content">
         <h1>כל שינוי מתחיל בצעד קטן אחד</h1>
-        <p class="subtitle">קבע פגישה ראשונה עכשיו</p>
+        <p class="subtitle">פסיכותרפיה לבוגרים ‖ טיפול במתבגרים ‖ הדרכת הורים</p>
         <div class="hero-buttons">
-            <a href="tel:(054)750-9962" class="button button-primary">התקשר 054-750-9962</a>
-            <a href="pages/contact" class="button button-secondary">קבע פגישה ראשונה עכשיו</a>
+            <a href="tel:(054)750-9962" class="button button-primary">התקשרו  054-750-9962</a>
+            <a href="pages/contact" class="button button-secondary">קבעו פגישה ראשונה עכשיו</a>
         </div>
-        <p class="hero-description">Compassionate therapy and psychiatry services, available in-person and online across Texas.</p>
+        <p class="hero-description">טיפול פסיכותרפיה על ידי מטפל רגשי מוסמך בכרמיאל, הסביבה ואונליין</p>
     </div>
 </section>
